--- a/Frontend/src/css/content.css
+++ b/Frontend/src/css/content.css
@@ -47,7 +47,6 @@
     border-radius: 10px;
     background-color: aliceblue;
     border: 3px solid #003366;
-
     overflow:hidden;
     float: left;
 }
@@ -69,7 +68,7 @@
 }
 .buy
 {
-    width: 250px;
+    width: 90%;
     height: auto;
     margin: 20px auto 20px auto;
     padding: 10px 5px 10px 10px;
@@ -78,6 +77,14 @@
     border: 3px solid #003366;
     border-radius: 10px;
     background-color: aliceblue;
+}
+.qty{
+    width: 100px;
+    float: left;
+}
+#purchase{
+    width: 80%;
+    float: left;
 }
 
 .button, button {
@@ -97,6 +104,16 @@
     background-size: 100%;
     background-repeat: no-repeat;
     float: right;
+}
+.jiffyfront{
+    width: 400px;
+    height: 302px;
+
+    margin: 50px 50px;
+    background-image: url("https://zastrow.com/kenzie/ttt/images/jiffy3.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    float: left;
 }
 @media only screen and (max-width: 900px){
     .jiffy{
